--- a/views/_booking_summary.erb
+++ b/views/_booking_summary.erb
@@ -5,7 +5,7 @@
             <img class="grid_2 left-float right-margin" src="<%=booking.category.photo_url_small%>"/>
             <% end %>
             <div class="<%if booking.category%>prefix_2<%else%>prefix_4<%end%> left-margin">
-               <div class="bottom-margin bottom-separator"><span class="smaller_text"><%=booking.item_description%></span> <span class="less_contrast_text smaller_text">(<%=l(booking.date_from,'%d %b %Y')%> -  <%=l(booking.date_to,'%d %b %Y')%>)</span></div>
+               <div class="bottom-margin bottom-separator"><span class="smaller_text"></span> <span class="less_contrast_text smaller_text">(<%=l(booking.date_from,'%d %b %Y')%> -  <%=l(booking.date_to,'%d %b %Y')%>)</span></div>
             </div>
             <div class="prefix_2 left-margin">
               <div class="inline_view_div_element">
