--- a/views/booking_pickup_return_places_management.erb
+++ b/views/booking_pickup_return_places_management.erb
@@ -54,7 +54,7 @@
         <%%= entity.is_return%>           
       </td>
       <td class="table-cell">
-        <%%= entity.price%>           
+        <%%= new Number(entity.price).toFixed(2)%>   
       </td>            
     </tr>
 </script>
