--- a/views/bookings_planning.js.erb
+++ b/views/bookings_planning.js.erb
@@ -350,6 +350,7 @@ require(['YSDSpreadSheet', 'YSDEventTarget', 'jquery', 'confirmedBooking'],
                  $(selector).val(parseInt(value)-1);
                }
              }
+             $(selector).css('background', 'none');
            }
         }
     }
