--- a/views/console_booking_configuration_templates.erb
+++ b/views/console_booking_configuration_templates.erb
@@ -53,6 +53,10 @@
               <td class="table-cell"><%=t.booking_configuration_templates.email_customer_reservation_confirmed%></td>
               <td class="table-cell"><div class="form-button"><a href="/admin/cms/templates/<%=b_m_c_c.nil? ? nil : b_m_c_c.id%>"><%=t.entitymanagement.edit%></a></div></td>
         </tr>                        
+        <tr class="table-row" style="background:none">
+              <td class="table-cell"><%=t.booking_configuration_templates.email_customer_payment_enabled%></td>
+              <td class="table-cell"><div class="form-button"><a href="/admin/cms/templates/<%=b_m_c_c_pay_enabled.nil? ? nil : b_m_c_c_pay_enabled.id%>"><%=t.entitymanagement.edit%></a></div></td>
+        </tr>          
       </tbody>      
     </table>   
   </div>  
