--- a/views/_returned_bookings.erb
+++ b/views/_returned_bookings.erb
@@ -10,7 +10,7 @@
 </div>
 <div class="container_12">
   <div class="grid_12">
-    <div id="returned_booking_data" class="guiblock smaller_text centered_text">
+    <div id="returned_booking_data" class="guiblock centered_text">
     </div>
   </div>
 </div>
@@ -24,13 +24,15 @@
        <thead class="table-header">
          <tr>
            <th class="table-header-title left_text" scope="col" style="width:10%"><%=t.booking_list.id%></th>
-           <th class="table-header-title left_text" scope="col" style="width:10%"><%=t.booking_list.item%></th>
            <th class="table-header-title left_text" scope="col" style="width:15%"><%=t.booking_list.date_to%></th>
+           <% if product_family and product_family.pickup_return_place %>
            <th class="table-header-title left_text" scope="col" style="width:15%"><%=t.booking_list.place%></th>
-           <th class="table-header-title left_text" scope="col" style="width:20%"><%=t.booking_list.customer%></th>
+           <% end %>
+           <th class="table-header-title left_text" scope="col" style="width:15%"><%=t.booking_list.customer%></th>
            <th class="table-header-title left_text" scope="col" style="width:10%"><%=t.booking_list.customer_phone%></th>
            <th class="table-header-title left_text" scope="col" style="width:10%"><%=t.booking_list.status%></th>
            <th class="table-header-title left_text" scope="col" style="width:10%"/>
+           <th class="table-header-title left_text" scope="col" style="width:15%"><%=t.booking_list.item%></th>
          </tr>
        </thead>
        <tbody id="elements_tbody" class="table-tbody">  
@@ -39,13 +41,19 @@
          for (i=0; i<data.length; i++) { %>          
          <tr class="table-row"> 
            <td class="table-cell"><a href="/admin/booking/bookings/<%%=data[i].id%>"><%%=data[i].id%></a></td>
-           <td class="table-cell"><%%=data[i].booking_item_reference%></td>
-           <td class="table-cell left_text right-margin"><%%=data[i].date_to.toString('yyyy.MM.dd')%> <%%=data[i].time_to%></td>
+           <td class="table-cell left_text right-margin"><%%=data[i].date_to.toString('yyyy.MM.dd')%> <% if product_family and product_family.time_to_from%> <%%=data[i].time_to%> <%end%> </td>
+           <% if product_family and product_family.pickup_return_place %>
            <td class="table-cell left_text right-margin"><%%=data[i].return_place%></td>
+           <% end %>
            <td class="table-cell left_text right-margin"><%%=data[i].customer_name%> <%%=data[i].customer_surname%></td>
            <td class="table-cell left_text right-margin"><%%=data[i].customer_phone%> <%%=data[i].customer_mobile_phone%></td> 
            <td class="table-cell left_text right-margin"><%%=data[i].status%></td> 
            <td class="table-cell left_text right-margin"></td>          
+           <td class="table-cell left_text">
+             <%% for (var idx=0;idx<data[i].booking_line_resources.length;idx++) { %>
+               <%%=data[i].booking_line_resources[idx].booking_item_reference%>&nbsp;
+             <%% } %>
+           </td>  
          </tr>
          <%% } %>
        </tbody>
