--- a/views/reserva-online.erb
+++ b/views/reserva-online.erb
@@ -32,20 +32,25 @@
       <!-- ITEM SELECTION TAB -->
 
       <% if booking_reservation_starts_with == :dates %>
-	    <div id="item-selection" class="bottom-margin">
-          <%= partial :reserva_online_dates_selection, :locals => {:booking_item_family => booking_item_family} %>
-		  <div id="result" class="top-separator">
-		  </div>
-	    </div>
- 	  <% end %>
-	  
-	  <% if booking_reservation_starts_with == :categories or booking_reservation_starts_with == :shopcart %>
 	      <div id="item-selection" class="bottom-margin">
-            <div id="items_families" class="container_12">
-            </div>
-          <%= partial :reserva_online_categories_selection, :locals => {:booking_item_family => booking_item_family} %>
+          <%= partial :reserva_online_dates_selection, :locals => {:booking_item_family => booking_item_family} %>
+		      <div id="result" class="top-separator">
+		      </div>
+	      </div>
+      <% elsif booking_reservation_starts_with == :categories %>
+        <div id="item-selection" class="bottom-margin">
+          <div id="items_families" class="container_12">
           </div>
-	  <% end %>
+          <%= partial :reserva_online_categories_selection, :locals => {:booking_item_family => booking_item_family} %>
+        </div>      
+ 	    <% elsif booking_reservation_starts_with == :shopcart %>
+	      <div id="item-selection" class="bottom-margin">
+          <%= partial :reserva_online_shopping_cart_header, :locals => {:booking_item_family => booking_item_family} %>          
+          <div id="items_families" class="container_12">
+          </div>
+          <%= partial :reserva_online_shopping_cart_footer, :locals => {:booking_item_family => booking_item_family} %>
+        </div>
+	    <% end %>
 
       <!-- OTHER TABS -->
 
@@ -179,29 +184,36 @@
   </script>
 
   <script type="text/tmpl" id="script_shopping_cart">         
-              <div class="<%% if (currentRow == totalRows-1 && lastRowItems == 2 && currentCol == 0){%>prefix_2<%%} else if (currentRow == totalRows-1 && lastRowItems == 1 && currentCol == 0) {%>prefix_4<%%}%> grid_4">
+              <div class="<%% if (currentRow == totalRows-1 && lastRowItems == 2 && currentCol == 0){%>prefix_2<%%} else if (currentRow == totalRows-1 && lastRowItems == 1 && currentCol == 0) {%>prefix_4<%%}%> grid_<%%=12/totalCols%>">
                 <div id="family_<%%=category.family%>" class="family top-margin" style="padding:5px">
                   <div>
                     <img src="<%%=category.photo%>" style="display: block; margin: 0 auto" />
                   </div>
                   <div class="top-margin">
-                    <span class="centered_text" style="display: block; margin: 0 auto" ><%%=category.description%></span>
+                    <span class="centered_text <%%if (totalCols>3){%>smaller_text<%%}%>" style="display: block; margin: 0 auto" ><%%=category.description%></span>
                   </div>
                   <div class="top-margin">
-                    <form>
-                    <select class="quantity form-control" style="display:block; margin: 0 auto" rel="<%%=category.family%>">
-                       <option value="0">0</option>
-                       <option value="1">1</option>
-                       <option value="2">2</option>
-                       <option value="3">3</option>
-                       <option value="4">4</option>
-                       <option value="5">5</option>
-                       <option value="6">6</option>
-                       <option value="7">7</option>
-                       <option value="8">8</option>
-                       <option value="9">9</option>                       
-                    </select>
+                    <form class="select-category" rel="<%%=category.family%>">
+                      <select class="quantity form-control" style="display:block; margin: 0 auto" rel="<%%=category.family%>">
+                        <option value="0">0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>                       
+                      </select>
                     </form>
+                    <div class="category_not_available smaller_text" rel="<%%=category.family%>" style="display:none">
+                      <% if (admin_mode) %>
+                      <span class="booking-not-available centered_text" style="display:block"><%=t.new_booking.not_stock_manager%></span>
+                      <% else %>
+                      <span class="booking-not-available centered_text" style="display:block"><%=t.new_booking.not_stock%></span>                      
+                      <% end %>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -309,6 +321,42 @@
               <td class="quantity_column"><%%= booking.booking_extras[extra].quantity %></td>
               <td class="quantity_column"><%%= booking.booking_extras[extra].extra_cost %>€</td>
             </tr>
+          <%% } %>
+          <%% if (booking.time_from_cost > 0 ) { %>
+          <tr>
+            <td class="first_column"><%=t.new_booking.time_from_cost%></td>
+            <td class="quantity_column"></td>
+            <td class="quantity_column"><%%= booking.time_from_cost.toFixed(bookingDataSystem.configuration.roundDecimals || 0) %>€</td>
+            <td class="quantity_column">1</td>
+            <td class="quantity_column"><%%= booking.time_from_cost.toFixed(bookingDataSystem.configuration.roundDecimals || 0) %>€ </td>
+          </tr>
+          <%% } %>
+          <%% if (booking.time_to_cost > 0 ) { %>          
+          <tr>
+            <td class="first_column"><%=t.new_booking.time_to_cost%></td>
+            <td class="quantity_column"></td>
+            <td class="quantity_column"><%%= booking.time_to_cost.toFixed(bookingDataSystem.configuration.roundDecimals || 0) %>€ </td>
+            <td class="quantity_column">1</td>
+            <td class="quantity_column"><%%= booking.time_to_cost.toFixed(bookingDataSystem.configuration.roundDecimals || 0) %>€ </td>
+          </tr>
+          <%% } %>
+          <%% if (booking.pickup_place_cost > 0 ) { %>          
+          <tr>
+            <td class="first_column"><%=t.new_booking.pickup_place_cost%></td>
+            <td class="quantity_column"></td>
+            <td class="quantity_column"><%%= booking.pickup_place_cost.toFixed(bookingDataSystem.configuration.roundDecimals || 0) %>€</td>
+            <td class="quantity_column">1</td>
+            <td class="quantity_column"><%%= booking.pickup_place_cost.toFixed(bookingDataSystem.configuration.roundDecimals || 0) %>€ </td>
+          </tr>      
+          <%% } %>
+          <%% if (booking.return_place_cost > 0 ) { %>                 
+          <tr>
+            <td class="first_column"><%=t.new_booking.return_place_cost%></td>
+            <td class="quantity_column"></td>
+            <td class="quantity_column"><%%= booking.return_place_cost.toFixed(bookingDataSystem.configuration.roundDecimals || 0) %>€</td>
+            <td class="quantity_column">1</td>
+            <td class="quantity_column"><%%= booking.return_place_cost.toFixed(bookingDataSystem.configuration.roundDecimals || 0) %>€ </td>
+          </tr>                 
           <%% } %>
           <tr>
             <td class="total_column first_column"><%=t.new_booking.total.upcase%></td>
