--- a/views/bookings_management.erb
+++ b/views/bookings_management.erb
@@ -406,7 +406,7 @@
                             <tr class="table-row">
                                <td class="table-cell left_text"><%%=entity.booking_lines[lineIdx].item_id%> - <%%= entity.booking_lines[lineIdx].item_description %></td>
                                <td class="table-cell left_text">
-                                 <form data-lineindex="<%%=lineIdx%>" data-resourceindex="<%%=resourceIdx%>"">
+                                 <form data-lineindex="<%%=lineIdx%>" data-resourceindex="<%%=resourceIdx%>">
                                    <input type="hidden" name="id" value="<%%=entity.booking_lines[lineIdx].booking_line_resources[resourceIdx].id%>"/>                                 
                                    <input class="fieldcontrol resource_user_name" type="text" maxlength="80" size="15" name="resource_user_name" value="<%%=entity.booking_lines[lineIdx].booking_line_resources[resourceIdx].resource_user_name%>"/>
                                    <input class="fieldcontrol resource_user_surname" type="text" maxlength="80" size="15" name="resource_user_surname" value="<%%=entity.booking_lines[lineIdx].booking_line_resources[resourceIdx].resource_user_surname %>"/>
@@ -457,7 +457,8 @@
                      <table class="table bottom-margin-line bottom-separator">
                         <thead class="table-header">
                           <tr>
-                            <th class="table-cell" scope="col" style="width:40%"><%=t.booking_management.form.charge_date%></th>
+                            <th class="table-cell" scope="col" style="width:20%"><%=t.booking_management.form.charge_date%></th>
+                            <th class="table-cell" scope="col" style="width:20%"><%=t.booking_management.form.charge_payment_method%></th>                            
                             <th class="table-cell" scope="col" style="width:30%"><%=t.booking_management.form.charge_amount%></th>
                             <th class="table-cell" scope="col" style="width:30%"><%=t.booking_management.form.charge_status%></th>        
                           </tr>
@@ -466,6 +467,7 @@
                           <%% for (var chargeIdx=entity.charges.length-1; chargeIdx >=0 ; chargeIdx--) { %>
                             <tr class="table-row">
                                <td class="table-cell centered_text"><%%=self.formatDate(entity.charges[chargeIdx].date, 'dd.MM.yyyy HH:mm')%></td>
+                               <td class="table-cell centered_text"><%%=entity.charges[chargeIdx].payment_method_id%></td>
                                <td class="table-cell centered_text"><%%= new Number(entity.charges[chargeIdx].amount).toFixed(2) %></td>
                                <td class="table-cell centered_text"><span class="element-status <%%=self.model.entityHooks[0].chargeStatusClass(entity.charges[chargeIdx])%>"><%%= self.model.entityHooks[0].chargeStatusDescription[entity.charges[chargeIdx].status] %></span></td>
                             </tr>
@@ -476,7 +478,44 @@
                   <p><%=t.booking_management.form.no_charges%></p>
                 <%% } %>  
 
-                    <div class="top-separator top-margin top-space" style="width:90%">
+                <div class="top-margin-top-space">
+                   <button id="new_charge" type="button" class="form-button black-button">
+                     <%=t.booking_management.form.new_charge%>
+                   </button>
+
+                  <form name="charge" style="display:none">
+                    <div class="grid_6">
+                      <input type="hidden" name="id" value="<%%=entity.id%>"/>             
+                      <div class="more_contrast_text top-margin bottom-margin" style="text-decoration:underline"><%= t.booking_management.charge_form.title %></div>
+      
+                      <div class="formrow">
+                        <label for="date" class="fieldtitle"><%=t.booking_management.charge_form.date%></label>
+                        <input type="text" name="date" id="date" class="fieldcontrol" size="30" maxlength="16"/>
+                      </div>
+      
+                      <div class="formrow">
+                        <label for="payment_method" class="fieldtitle"><%=t.booking_management.charge_form.payment_method%></label>
+                        <select name="payment_method_id" class="fieldcontrol customer_height">
+                          <option value="bank_transfer"><%=t.booking_management.charge_form.bank_transfer%></option>
+                          <option value="cash"><%=t.booking_management.charge_form.cash%></option>
+                        </select> 
+                      </div>
+
+                      <div class="formrow">
+                        <label for="amount" class="fieldtitle"><%=t.booking_management.charge_form.amount%></label>
+                        <input type="text" name="amount" id="amount" class="fieldcontrol" size="30" maxlength="10"/>
+                      </div>
+
+                      <div class="navigation-bar bottom-margin">
+                        <div class="navigation-bar-crud-buttons right-float">
+                           <input id="new_charge_button" type="button" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.create%>"/>
+                        </div>
+                      </div>  
+                    </div>
+                  </form>
+                </div>
+
+                <div class="top-separator top-margin top-space" style="width:90%">
 
                      <%% if (entity.is_expired) { %>
                      <div class="element_template">
@@ -487,26 +526,29 @@
                        </div>              
                      </div> 
                      <%% } %>    
+                
                      <div>
                          <%% if (entity.status != 'cancelled') { %>
                            <%% if (!entity.force_allow_payment) { %>
-                              <div class="error-status"><%=t.booking_management.form.payment_not_allowed%></div>  
-                              <button class="top-margin form-button black-button element-action-button" id="allow_payment_button" 
+                            <div class="error-status">
+                              <%=t.booking_management.form.payment_not_allowed%>
+                            </div>  
+                            <button class="top-margin form-button black-button element-action-button" id="allow_payment_button" 
                                 title="<%=t.booking_management.form.allow_payment_button.label%>" 
                                 data-action-method="POST"
                                 data-action-url="/api/booking/allow-payment/<%%=entity.id%>"
                                 data-confirm-message="<%=t.booking_management.form.allow_payment_button.message%>">
                                 <%=t.booking_management.form.allow_payment_button.label%>
-                              </button>
+                            </button>
                            <%% } 
                                else { %>
-                                 <span class="confirmed-status"><%=t.booking_management.form.force_allow_payment%></span>    
+                            <span class="confirmed-status"><%=t.booking_management.form.force_allow_payment%></span>    
                            <%% } %>  
                         <%% } %>  
                      </div> 
-                    </div>
-                  </div>
-              </div>             
+                </div>
+              </div>
+            </div>             
           </div>
      </div>
  
@@ -803,6 +845,9 @@
       
   
      </form>
+
+     <div id="complements">
+     </div>
 </script>
 
 <script type="text/tmpl" id="linked_bookings_script">
