--- a/views/bookings_management.js.erb
+++ b/views/bookings_management.js.erb
@@ -1,7 +1,9 @@
-require(['jquery', 'YSDEntityManagement','YSDRemoteDataSource', 'YSDSelectSelector', 'YSDForms', 'ysdtemplate', 
+require(['jquery', 'YSDEntityManagement','YSDRemoteDataSource', 'YSDSelectSelector', 
+         'YSDForms', 'ysdtemplate', 'YSDGui',
          'jquery.ui', 'jquery.ui.datepicker-es', 'jquery.ui.datepicker.validation',
-         'jquery.formparams' ],
-    function($, EntityManagement, RemoteDataSource, SelectSelector, YSDForms, tmpl) {
+         'jquery.formparams', 'jquery.ui.timepicker','autonumeric' ],
+    function($, EntityManagement, RemoteDataSource, SelectSelector, YSDForms, tmpl,
+         YSDGui) {
 
  
   function BookingHook() {
@@ -103,6 +105,39 @@ require(['jquery', 'YSDEntityManagement','YSDRemoteDataSource', 'YSDSelectSelect
       });
       $('.customer_weight').bind('change', function() {
         self.updateLineResource($(this)[0]);
+      });
+      $('#new_charge').bind('click', function(){
+        $('#new_charge_button').unbind('click');
+        $('#date').datetimepicker(
+            {controlType: 'select', showTimezone: false, useLocalTimezone: true, 
+             numberOfMonths:1, dateFormat: 'dd/mm/yy'},
+            '<%= session[:locale] %>');
+        $('#date').datetimepicker('setDate', new Date());
+        $('#amount').autoNumeric('init',{aSep:''});
+        $('#new_charge_button').bind('click', function(){
+           var formdata = $('form[name="charge"]').formParams(true);
+           var json_request = JSON.stringify(formdata);
+           $.ajax({
+               type: 'POST',
+               data : json_request,
+               url : '/api/booking/charge',
+               success: function(data, textStatus, jqXHR) {
+                 bookingManager.model.synchronizeCurrentEntity(data);
+                 bookingManager.model.change_state('entity_updated_successfully');
+                 alert('<%=t.booking_management.charge_form.done%>');
+                 $('form[name="charge"]').hide();
+               },
+               error: function(data, textStatus, jqXHR) {
+                 alert('Error updating resource');
+               }
+           });
+        });       
+        if ($('form[name="charge"]').is(':visible')) {
+          $('form[name="charge"]').hide();
+        }
+        else {
+          $('form[name="charge"]').show();          
+        }
       });
 
     }
